; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpegvideo_motion.c_ff_mpv_motion.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpegvideo_motion.c_ff_mpv_motion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@FMT_MPEG1 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_mpv_motion(%struct.TYPE_4__* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32** %5, [4 x i32]* %6, [16 x i32]* %7) #0 {
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32**, align 8
  %15 = alloca [4 x i32]*, align 8
  %16 = alloca [16 x i32]*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32** %5, i32*** %14, align 8
  store [4 x i32]* %6, [4 x i32]** %15, align 8
  store [16 x i32]* %7, [16 x i32]** %16, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @FMT_MPEG1, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i32**, i32*** %14, align 8
  %29 = load [4 x i32]*, [4 x i32]** %15, align 8
  %30 = bitcast [4 x i32]* %29 to i32**
  %31 = load [16 x i32]*, [16 x i32]** %16, align 8
  %32 = bitcast [16 x i32]* %31 to i32**
  %33 = call i32 @mpv_motion_internal(%struct.TYPE_4__* %23, i32* %24, i32* %25, i32* %26, i32 %27, i32** %28, i32** %30, i32** %32, i32 1)
  br label %46

34:                                               ; preds = %8
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %36 = load i32*, i32** %10, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = load i32*, i32** %12, align 8
  %39 = load i32, i32* %13, align 4
  %40 = load i32**, i32*** %14, align 8
  %41 = load [4 x i32]*, [4 x i32]** %15, align 8
  %42 = bitcast [4 x i32]* %41 to i32**
  %43 = load [16 x i32]*, [16 x i32]** %16, align 8
  %44 = bitcast [16 x i32]* %43 to i32**
  %45 = call i32 @mpv_motion_internal(%struct.TYPE_4__* %35, i32* %36, i32* %37, i32* %38, i32 %39, i32** %40, i32** %42, i32** %44, i32 0)
  br label %46

46:                                               ; preds = %34, %22
  ret void
}

declare dso_local i32 @mpv_motion_internal(%struct.TYPE_4__*, i32*, i32*, i32*, i32, i32**, i32**, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
